Hoàn thiện UI/UX

--- a/index.html
+++ b/index.html
@@ -1,120 +1,193 @@
-<!DOCTYPE html>
-<html lang="vi">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Trang Portfolio cá nhân của [Tên Của Bạn], nhà phát triển web chuyên nghiệp với kỹ năng trong HTML, CSS, JavaScript và React.js.">
-  <meta name="keywords" content="Portfolio, Web Developer, [Tên Của Bạn], HTML, CSS, JavaScript, React.js">
-  <title>Trang Portfolio - [Tên Của Bạn]</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <!-- Thêm Google Fonts nếu cần -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <!-- Thêm Font Awesome để sử dụng icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
 <body>
-  <!-- Header -->
-  <header>
-    <nav>
-      <div class="logo">
-        <a href="#home">[Tên Của Bạn]</a>
+    <!-- navbar header -->
+    <div class="nav-header">
+      <div class="nav-brand">
+        <img src="https://s3-us-west-2.amazonaws.com/parallax-theme/assets/bradlogo2.png">
       </div>
-      <ul class="nav-links">
-        <li><a href="#about">Giới Thiệu</a></li>
-        <li><a href="#projects">Dự Án</a></li>
-        <li><a href="#contact">Liên Hệ</a></li>
-      </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
-    </nav>
-  </header>
-
-  <!-- Giới Thiệu -->
-  <section id="about">
-    <div class="container">
-      <h1>Xin Chào, Tôi Là [Tên Của Bạn]</h1>
-      <p>Một nhà phát triển web với đam mê tạo ra các ứng dụng web tương tác và hiện đại. Tôi có kinh nghiệm trong việc xây dựng các dự án sử dụng HTML, CSS, JavaScript, và các framework như React.js.</p>
-      <img src="images/profile.jpg" alt="Ảnh Cá Nhân" class="profile-img">
-      <div class="skills">
-        <h2>Kỹ Năng</h2>
+      <i class="fa fa-bars fa-3x"></i>
+      <div class="header-links">
         <ul>
-          <li>HTML5 & CSS3</li>
-          <li>JavaScript</li>
-          <li>React.js</li>
-          <li>Node.js</li>
-          <li>Git & GitHub</li>
-          <li>Responsive Design</li>
+          <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
+          <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
+          <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
         </ul>
       </div>
     </div>
-  </section>
-
-  <!-- Dự Án -->
-  <section id="projects">
-    <div class="container">
-      <h2>Các Dự Án Đã Thực Hiện</h2>
-      <div class="project-list">
-        <!-- Dự Án 1 -->
-        <div class="project-item">
-          <img src="images/project1.png" alt="Dự Án 1" class="project-img">
-          <h3>Dự Án 1: Web Tương Tác Thời Tiết</h3>
-          <p>Ứng dụng web hiển thị thông tin thời tiết theo vị trí của người dùng với giao diện đẹp mắt và tương tác mượt mà.</p>
-          <p>Công nghệ sử dụng: HTML, CSS, JavaScript, API Thời Tiết</p>
-          <a href="https://github.com/[Tên Người Dùng]/weather-app" target="_blank">Xem Dự Án</a>
+    <!-- end navbar header -->
+  
+    <!-- sidebar slider -->
+    <div class="nav-screen">
+      <i class="fa fa-times fa-3x"></i>
+      <div class="nav-container">
+        <div class="nav-links">
+          <ul id='myMenu'>
+            <li data-menuanchor="secondPage"><a href="#about">ABOUT</a></li>
+            <li data-menuanchor="thirdPage"><a href="#portfolio">PORTFOLIO</a></li>
+            <li data-menuanchor="fourthPage"><a href="#contact">CONTACT</a></li>
+          </ul>
         </div>
-        <!-- Dự Án 2 -->
-        <div class="project-item">
-          <img src="images/project2.png" alt="Dự Án 2" class="project-img">
-          <h3>Dự Án 2: Blog Cá Nhân</h3>
-          <p>Tạo một blog cá nhân với khả năng đăng bài, chỉnh sửa, và xóa bài viết. Giao diện người dùng thân thiện và dễ sử dụng.</p>
-          <p>Công nghệ sử dụng: React.js, Node.js, Express, MongoDB</p>
-          <a href="https://github.com/[Tên Người Dùng]/personal-blog" target="_blank">Xem Dự Án</a>
-        </div>
-        <!-- Thêm các dự án khác tương tự -->
       </div>
     </div>
-  </section>
-
-  <!-- Liên Hệ -->
-  <section id="contact">
-    <div class="container">
-      <h2>Liên Hệ</h2>
-      <form action="https://formspree.io/f/[your_form_id]" method="POST">
-        <div class="form-group">
-          <label for="name">Tên:</label>
-          <input type="text" id="name" name="name" required>
+    <!-- end navbar slider -->
+  
+    <!-- begin fullpage -->
+  
+    <div id="fullpage">
+  
+      <!-- begin section -->
+  
+      <div class="section aboutme" data-anchor="aboutme">
+        <div class="opaque-bg animated fadeInDown">
+          <h1 style="color:white">BRAD<span style="color:#FF6363">/</span>ENGELHARDT</h1>
+          <p><span id="holder"></span><span class="blinking-cursor">|</span></p>
         </div>
-
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="_replyto" required>
-        </div>
-
-        <div class="form-group">
-          <label for="message">Tin Nhắn:</label>
-          <textarea id="message" name="message" rows="5" required></textarea>
-        </div>
-
-        <button type="submit">Gửi</button>
-      </form>
-      <div class="social-links">
-        <a href="https://github.com/[Tên Người Dùng]" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://linkedin.com/in/[Tên Người Dùng]" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-        <a href="https://twitter.com/[Tên Người Dùng]" target="_blank"><i class="fab fa-twitter"></i> Twitter</a>
+        <i id="moveDown" class="fa fa-chevron-down fa-3x bounce"></i>
       </div>
+      <!-- end section -->
+  
+      <!-- begin section -->
+  
+      <div class="section" data-anchor="skills">
+        <div class="content">
+          <h1 class="wow fadeInDown" data-wow-delay="0.2s">ABOUT ME</h1>
+          <p class="wow fadeInDown" data-wow-delay="0.2s">Hi, I'm Brad Engelhardt! I'm a Silicon Valley based Web Designer & Front-end Developer focused on creating clean, responsive web designs!</p>
+  
+          <div class=" wow fadeInUp container-skillbar" data-wow-delay="0.2s">
+            <div class="skillbar clearfix " data-percent="90%">
+              <div class="skillbar-title" style="background: #DD1E2F;"><span>HTML5</span></div>
+              <div class="skillbar-bar" style="background: #DD1E2F;"></div>
+              <div class="skill-bar-percent">90%</div>
+            </div> <!-- End Skill Bar -->
+  
+            <div class="skillbar clearfix " data-percent="80%">
+              <div class="skillbar-title" style="background: #EBB035;"><span>CSS3</span></div>
+              <div class="skillbar-bar" style="background: #EBB035;"></div>
+              <div class="skill-bar-percent">80%</div>
+            </div> <!-- End Skill Bar -->
+  
+            <div class="skillbar clearfix " data-percent="75%">
+              <div class="skillbar-title" style="background: #218559;"><span>Photoshop</span></div>
+              <div class="skillbar-bar" style="background: #218559;"></div>
+              <div class="skill-bar-percent">75%</div>
+            </div> <!-- End Skill Bar -->
+  
+            <div class="skillbar clearfix " data-percent="45%">
+              <div class="skillbar-title" style="background: #6840D4;"><span>Rails</span></div>
+              <div class="skillbar-bar" style="background: #6840D4;"></div>
+              <div class="skill-bar-percent">45%</div>
+            </div> <!-- End Skill Bar -->
+  
+            <div class="skillbar clearfix " data-percent="30%">
+              <div class="skillbar-title" style="background: #06A2CB;"><span>jQuery</span></div>
+              <div class="skillbar-bar" style="background: #06A2CB;"></div>
+              <div class="skill-bar-percent">30%</div>
+            </div> <!-- End Skill Bar -->
+  
+            <div class="skillbar clearfix " data-percent="20%">
+              <div class="skillbar-title" style="background: #AB4DD2;"><span>PHP</span></div>
+              <div class="skillbar-bar" style="background: #AB4DD2;"></div>
+              <div class="skill-bar-percent">20%</div>
+            </div> <!-- End Skill Bar -->
+          </div>
+        </div>
+      </div>
+      <!-- end section -->
+  
+      <!-- begin section -->
+  
+      <div class="section" data-anchor="projects">
+        <div class="content-slide">
+          <div class="slide">
+            <h1 class="wow fadeInDown" data-wow-delay="0.2s">XFAIRE</h1>
+            <p class="wow fadeInDown" data-wow-delay="0.2s">Digital streaming service</p>
+            <img class="wow fadeInUp" data-wow-delay="0.2s" data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/xfaire.jpg">
+          </div>
+          <div class="slide">
+            <h1>MACHETE ENERGY</h1>
+            <p>Energy drink website</p>
+            <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/machete.jpg">
+          </div>
+          <div class="slide">
+            <h1>PORTFOLIO</h1>
+            <p>Mockup of a personal portfolio I was working on for a friend.</p>
+            <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/cascioportfolio.jpg">
+          </div>
+          <div class="slide">
+            <h1>THATONEBLOG</h1>
+            <p>Minimalist blogging platform.</p>
+            <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/blog.jpg">
+          </div>
+          <div class="slide">
+            <h1>PIXBORED</h1>
+            <p>Website for sharing images and gifs.</p>
+            <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/pixbored.jpg">
+          </div>
+          <div class="slide">
+            <h1>PERSONAL WEBSITE</h1>
+            <p>Responsive vertical/horizontal header website theme.</p>
+            <img data-src="https://s3-us-west-2.amazonaws.com/bradengelhardt/assets/personalsite.jpg">
+          </div>
+        </div>
+      </div>
+      <!-- end section -->
+  
+      <!-- begin section -->
+  
+      <div class="section" data-anchor="contact">
+        <div class="content wow fadeInDown" data-wow-delay="0.2s">
+          <h1>CONTACT ME</h1>
+          <p>Whether you're interested in working with me or just want to say hello, I'd love to hear from you!</p>
+          <br>
+          <div class="contact-form">
+  
+            <div id="form-messages"></div>
+            <form id="ajax-contact" method="post" role="form" action="contact.php" data-toggle="validator">
+              <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="0.6s">
+                <input type="text" class="form-control" id="name" name="name" placeholder="NAME" data-error="Field can't be blank!" required>
+                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                <div class="help-block with-errors"></div>
+              </div>
+  
+              <div class="form-group has-feedback wow fadeInRight" data-wow-delay="0.8s">
+                <input type="email" class="form-control" id="email" name="email" placeholder="EMAIL" data-error="Field can't be blank!" required>
+                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                <div class="help-block with-errors"></div>
+              </div>
+  
+              <div class="form-group has-feedback wow fadeInLeft" data-wow-delay="1s">
+                <textarea data-minlength="10" class="form-control" id="message" name="message" placeholder="MESSAGE" data-error="Minimum of 10 characters" required></textarea>
+                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                <div class="help-block with-errors"></div>
+              </div>
+  
+              <div class="hidden">
+                <input type="text" class="form-control" id="human" name="human" placeholder="">
+              </div>
+              <div class="wow fadeInUp" data-wow-delay="1s">
+                <button type="submit" id="submit" name="submit" class="btn btn-lg">SEND MESSAGE</button>
+              </div>
+            </form>
+            <br>
+          </div>
+        </div>
+      </div>
+      <!-- end section -->
+  
+      <!-- begin section -->
+  
+      <div class="section fp-auto-height">
+        <div class="footer">
+          <p>CONNECT WITH ME</p>
+          <div class="social-links">
+            <span><a href="https://www.linkedin.com/in/bradleyengelhardt" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></span>
+            <span><a target="_blank" href="https://twitter.com/bradengelhardt" target="_blank"><i class="fa fa-twitter fa-2x"></i></a></span>
+            <span><a href="https://github.com/SquishyAndroid" target="_blank"><i class="fa fa-github fa-2x"></i></a></span>
+            <span><a href="https://codepen.io/SquishyAndroid/pens/public/"><i class="fa fa-codepen fa-2x"></i></a></span>
+          </div>
+        </div>
+      </div>
+      <!-- end section -->
+  
     </div>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 [Tên Của Bạn]. All rights reserved.</p>
-    </div>
-  </footer>
-
-  <script src="js/scripts.js"></script>
-</body>
-</html>
+    <!-- end fullpage -->
+  </body>
